Set widths and heights on avatars to stop page jump on load

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -760,6 +760,7 @@ code {
 }
 
 .comment__item .img {
+  background-color: #fff;
   display: inline-block;
   margin: 0 0 1em;
   position: relative;
