--- a/assets/styles/sass/components/_comments.scss
+++ b/assets/styles/sass/components/_comments.scss
@@ -26,6 +26,7 @@
 }
 
 .comment__item .img {
+	background-color: #fff;
 	display: inline-block;
 	margin: 0 0 1em;
 	position: relative;
